css/main.css
/* ... */
.alert-box__close::before, .alert-box__close::after {
    content: '';
    position: absolute;
    display: inline-block;
    width: 2px;
    height: 12px;
    top: 0;
    left: 5px;
}

.alert-box__close::before {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.alert-box__close::after {
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
}

.alert-box--error {
    background-color: #ffd1d2;
    color: #dd4043;
}

.alert-box--error .alert-box__close::before, 
.alert-box--error .alert-box__close::after {
    background-color: #dd4043;
}

.alert-box--success {
    background-color: #c8e675;
    color: #637533;
}

.alert-box--success .alert-box__close::before, 
.alert-box--success .alert-box__close::after {
    background-color: #637533;
}

.alert-box--info {
    background-color: #d5ebfb;
    color: #387fb2;
}

.alert-box--info .alert-box__close::before, 
.alert-box--info .alert-box__close::after {
    background-color: #387fb2;
}

.alert-box--notice {
    background-color: #fff099;
    color: #827217;
}

.alert-box--notice .alert-box__close::before, 
.alert-box--notice .alert-box__close::after {
    background-color: #827217;
}

/* -------------------------------------------------------------------
 * ## pagination 
 * ------------------------------------------------------------------- */
.pgn {
    margin: 3.2rem auto 3.2rem;
    text-align: center;
}

.pgn ul {
    display: inline-block;
    list-style: none;
    margin-left: 0;
    position: relative;
    padding: 0 6rem;
}

.pgn ul li {
    display: inline-block;
    margin: 0;
    padding: 0;
}

.pgn__num {
    font-family: "Open Sans", sans-serif;
    font-weight: 700;
    font-size: 1.7rem;
    line-height: 3.2rem;
    display: inline-block;
    padding: .2rem 1.2rem;
    height: 3.6rem;
    margin: .2rem .2rem;
    color: #272727;
    border-radius: 4px;
    -webkit-transition: all, .3s, ease-in-out;
    transition: all, .3s, ease-in-out;
}

.pgn__num:hover {
    background: #efefef;
    color: #000000;
}

.pgn .current, .pgn .current:hover {
    background-color: #272727;
    color: #ffffff;
}

.pgn .inactive, .pgn .inactive:hover {
    opacity: 0.4;
    cursor: default;
}

.pgn__prev, .pgn__next {
    display: block;
    background-repeat: no-repeat;
    background-size: 16px 16px;
    background-position: center;
    height: 3.6rem;
    width: 4.8rem;
    line-height: 2rem;
    border-radius: 4px;
    padding: 0;
    margin: 0;
    opacity: 1;
    font: 0/0 a;
    text-shadow: none;
    color: transparent;
    -webkit-transition: all, .2s, ease-in-out;
    transition: all, .2s, ease-in-out;
    position: absolute;
    top: 50%;
    -webkit-transform: translate3d(0, -50%, 0);
    transform: translate3d(0, -50%, 0);
}

.pgn__prev:hover, .pgn__next:hover {
    background-color: #efefef;
}

.pgn__prev {
    background-image: url("../images/icons/icon-arrow-left.svg");
    left: 0;
}

.pgn__next {
    background-image: url("../images/icons/icon-arrow-right.svg");
    right: 0;
}

.pgn__prev.inactive, .pgn__next.inactive {
    opacity: 0.4;
    cursor: default;
}

.pgn__prev.inactive:hover, .pgn__next.inactive:hover {
    background-color: transparent;
}

/* ------------------------------------------------------------------- 
 * responsive:
 * pagination
 * ------------------------------------------------------------------- */
@media screen and (max-width:600px) {
    .pgn ul {
        padding: 0 5.2rem;
    }
}



/* ===================================================================
 * # common and reusable styles 
 *
 * ------------------------------------------------------------------- */
.wide {
    max-width: 1400px;
}

.wider {
    max-width: 1600px;
}

.narrow {
    max-width: 1000px;
}



/* ===================================================================
 * # site header 
 *
 * ------------------------------------------------------------------- */
.s-header {
    width: 100%;
    background-color: #ffffff;
    position: relative;
}

.s-header::before {
    z-index: 101;
    content: "";
    display: block;
    width: 100%;
    height: .6rem;
    background-color: #5b8fb9;
    position: absolute;
    top: 0;
    left: 0;
}

.s-header__content {
    background-color: #ffffff;
    background-image: url(../images/leaves.jpg);
    background-size: 400px 256px;
    background-repeat: no-repeat;
    background-position: right bottom;
    min-height: 30rem;
    padding-top: 12rem;
    padding-bottom: 8rem;
    border-bottom: 1px dashed #efefef;
    position: relative;
}

/* -------------------------------------------------------------------
 * ## header-logo 
 * ------------------------------------------------------------------- */
.s-header__logotext {
    margin: 0;
    padding: 0;
    width: 100%;
    font-family: Georgia, serif;
    font-weight: 400;
    font-size: 7.2rem;
    line-height: 1;
    letter-spacing: -.45rem;
}

.s-header__logotext a {
    color: #5b8fb9;
}

.s-header__tagline {
    font-family: "Open Sans", sans-serif;
    font-weight: 400;
    font-size: 1.8rem;
    line-height: 2rem;
    margin: 0;
    padding: 0;
    color: #5b8fb9;
    position: relative;
    top: .8rem;
    left: .8rem;
}

/* -------------------------------------------------------------------
 * ## main navigation 
 * ------------------------------------------------------------------- */
.s-header__nav-wrap, .s-header__nav {
    margin: 0;
    padding: 0;
}

/* nav-wrap */
.s-header__nav-wrap {
    z-index: 1;
    width: 100%;
    font-family: "Open Sans", sans-serif;
    font-weight: 700;
    font-size: 1.1rem;
    text-transform: uppercase;
    letter-spacing: .2rem;
    background-color: #F5F4F3;
    border-bottom: 1px solid #EAE8E8;
    position: absolute;
    top: .6rem;
    left: 0;
}

.s-header__nav {
    list-style: none;
    min-height: 6rem;
    width: auto;
    margin-left: 20px;
    position: relative;
}
/* ... */

